--- a/flipkart.html
+++ b/flipkart.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="flipkart.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -23,12 +24,12 @@
                 </div>
             
 
-                <div class="search m-2 d-flex shadow">    
+                <div class="search m-2 d-flex shadow bg-white">    
                     <form class=" w-100" role="search">
                         <input class="form-control rounded-0 w-100" type="search" placeholder="Search for products, brands and more" aria-label="Search">
                     </form> 
-                        <div class="d-flex align-item-center search-icon bg-light p-1 pt-2 pe-2">
-                        <i class="bi bi-search text-primary"></i>                 
+                        <div class="d-flex align-item-center search-icon bg-white p-1 pt-2 pe-2">
+                        <i class="bi bi-search text-primary fa-bold"></i>                 
                     </div>
                 </div>
 
@@ -37,18 +38,18 @@
                 <p class="text-white m-auto" style="width: 8rem;">Become a Seller</p>
 
                 <ul class="dropdown text-white m-auto">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">More</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <a class="nav-link dropdown-toggle active more" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">More</a>
+                    <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="#"><i class="bi bi-bell-fill m-sm-2 text-primary"></i>Notification Preference</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-question-square-fill m-sm-2 text-primary"></i>24*7 Customer Care</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-arrow-up-right m-sm-2 text-primary"></i>Advertise</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-download m-sm-2 text-primary"></i>Download App</a></li>
-                    </ul>
+                    </ul> -->
                 </ul>
-            </div>
-            <div class="cart ms-5 gap-2">
-                    <i class="bi bi-cart-fill text-white"></i>
-                <p class="text-white m-auto d-inline ms-1" style="width: 8rem;">Cart</p>
+                <div class="cart ms-5 gap-2">
+                    <i class="fa-solid fa-cart-shopping text-white"></i>
+                    <p class="text-white m-auto d-inline ms-1" style="width: 8rem;">Cart</p>
+                </div>
             </div>
             </div>            
         </div>
@@ -113,7 +114,7 @@
 <!-- Carousel -->
 <div id="carousel" class="carousel slide">
     <div class="container carousel-inner justify-content-center mt-2 position-relative">
-        <div class="carousel-item active">
+        <div class="carousel-item active w-100">
             <img src="Images/carosel1.webp" class="d-block w-100" alt="carousel1">
         </div>
         <div class="carousel-item">
@@ -227,6 +228,9 @@
 <section class="main-section container mt-3 ">
     <div class="d-flex w-100 justify-content-between">
     <div class="view-all shadow">
+        <div class="offers">
+
+        </div>
         <div class="main-seaction-title d-flex justify-content-between">
             <div class="timer">
                 <h4>Music Instruments</h4>
