--- a/flipkart.html
+++ b/flipkart.html
@@ -39,13 +39,14 @@
 
                 <ul class="dropdown text-white m-auto">
                     <a class="nav-link dropdown-toggle active more" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">More</a>
-                    <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="#"><i class="bi bi-bell-fill m-sm-2 text-primary"></i>Notification Preference</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-question-square-fill m-sm-2 text-primary"></i>24*7 Customer Care</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-arrow-up-right m-sm-2 text-primary"></i>Advertise</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-download m-sm-2 text-primary"></i>Download App</a></li>
-                    </ul> -->
+                    </ul>
                 </ul>
+
                 <div class="cart ms-5 gap-2">
                     <i class="fa-solid fa-cart-shopping text-white"></i>
                     <p class="text-white m-auto d-inline ms-1" style="width: 8rem;">Cart</p>
@@ -60,52 +61,52 @@
 <section class="shadow p-3 bg-body rounded"> 
     <div class="container d-flex justify-content-evenly">
         <div class="Grocery">
-            <img src="Images/grocery.webp" alt="Grocery" width="64" height="64">
+            <img src="Images/grocery.webp" alt="Grocery" width="64" height="64" />
             <p>Grocery</p>
         </div>
 
         <div class="Mobiles">
-            <img src="Images/mobiles.webp" alt="Mobiles" width="64" height="64">
+            <img src="Images/mobiles.webp" alt="Mobiles" width="64" height="64" />
             <p>Mobiles</p>
         </div>
 
         <div class="Clothes">
-            <img src="Images/clothes.webp" alt="Clothes" width="64" height="64">
+            <img src="Images/clothes.webp" alt="Clothes" width="64" height="64" />
             <p>Fashion</p>
         </div>
 
         <div class="Electronics">
-            <img src="Images/laptop.webp" alt="Electronics" width="64" height="64" >
+            <img src="Images/laptop.webp" alt="Electronics" width="64" height="64"/>
             <p>Electronics</p>
         </div>
 
         <div class="Home text-center">
-            <img src="Images/home.webp" alt="Home" width="64" height="64">
+            <img src="Images/home.webp" alt="Home" width="64" height="64" />
             <p>Home</p>
         </div>
 
         <div class="Appliances px-2">
-            <img src="Images/electronics.webp" alt="Appliances" width="64" height="64">
+            <img src="Images/electronics.webp" alt="Appliances" width="64" height="64" />
             <p>Appliances</p>
         </div>
 
         <div class="Travel px-2">
-            <img src="Images/flights.webp" alt="flights" width="64" height="64">
+            <img src="Images/flights.webp" alt="flights" width="64" height="64"/>
             <p>Travel</p>
         </div>
 
         <div class="Top Offers">
-            <img src="Images/top-offers.webp" alt="flights" width="64" height="64">
+            <img src="Images/top-offers.webp" alt="flights" width="64" height="64"/>
             <p>Top Offers</p>
         </div>
 
         <div class="toys">
-            <img src="Images/toys.webp" alt="toys" width="64" height="64">
+            <img src="Images/toys.webp" alt="toys" width="64" height="64"/>
             <p>Beauty, Toys & More</p>
         </div>
 
         <div class="vehicle">
-            <img src="Images/vehicle.webp" alt="vehicle" width="64" height="64">
+            <img src="Images/vehicle.webp" alt="vehicle" width="64" height="64"/>
             <p>Two Wheelers</p>
         </div>
     </div>
@@ -115,13 +116,13 @@
 <div id="carousel" class="carousel slide">
     <div class="container carousel-inner justify-content-center mt-2 position-relative">
         <div class="carousel-item active w-100">
-            <img src="Images/carosel1.webp" class="d-block w-100" alt="carousel1">
+            <img src="Images/carosel1.webp" class="d-block w-100" alt="carousel1" />
         </div>
         <div class="carousel-item">
-            <img src="Images/carosel2.webp" class="d-block w-100" alt="carousel2">
+            <img src="Images/carosel2.webp" class="d-block w-100" alt="carousel2" />
         </div>
         <div class="carousel-item">
-            <img src="Images/carosel3.webp" class="d-block w-100" alt="carousel3">
+            <img src="Images/carosel3.webp" class="d-block w-100" alt="carousel3"/>
         </div>
 
         <button class="carousel-control-prev p-5" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -161,7 +162,7 @@
 
             <div class="card" style=" border: 0rem; ">
                 <div class="image w-auto m-auto d-flex align-items-center ">
-                    <img src="Images/Temple.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/Temple.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Home Temples</p>
@@ -173,7 +174,7 @@
 
             <div class="card" style="border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center ">
-                    <img src="Images/tablates.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/tablates.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body"> 
                     <p class="card-text">Premium Tablets</p>
@@ -184,7 +185,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center ">
-                    <img src="Images/home-decore.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/home-decore.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Home Decor</p>
@@ -195,7 +196,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center ">
-                    <img src="Images/mobile1.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/mobile1.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Mobile Phones</p>
@@ -206,7 +207,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center ">
-                    <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Water bottle</p>
@@ -218,7 +219,7 @@
     </div>
     <div class="advertise d-flex justify-content-between">
         <aside>
-            <img src="Images/aside.jpg" alt="advertise" width="250px">
+            <img src="Images/aside.jpg" alt="advertise" width="250px"/>
         </aside>
     </div>
 </div>
@@ -231,7 +232,7 @@
         <div class="offers">
 
         </div>
-        <div class="main-seaction-title d-flex justify-content-between">
+        <div class="main-seaction-title d-flex justify-content-between p-2">
             <div class="timer">
                 <h4>Music Instruments</h4>
                 <p class="text-muted">Shop Now!</p>
@@ -241,7 +242,7 @@
         <div class="d-flex">
             <div class="card" style="border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/harmonium.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/harmonium.webp" class="card-img-top w-50 m-auto" alt="watch" />
                 </div>
                 <div class="card-body">
                     <p class="card-text">Harmonium</p>
@@ -252,7 +253,7 @@
 
             <div class="card" style=" border: 0rem; ">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/flutes.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/flutes.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Flutes</p>
@@ -264,7 +265,7 @@
 
             <div class="card" style="border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/guitar.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/guitar.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body"> 
                     <p class="card-text">Acoustic Guitars</p>
@@ -275,7 +276,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/musical-accesories.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/musical-accesories.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Accessories</p>
@@ -286,7 +287,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/microphone-accessories.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/microphone-accessories.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Microphone</p>
@@ -297,7 +298,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Instruments</p>
@@ -314,7 +315,7 @@
 <section class="main-section container mt-3 ">
     <div class="d-flex w-100 justify-content-between">
     <div class="view-all shadow">
-        <div class="main-seaction-title d-flex justify-content-between">
+        <div class="main-seaction-title d-flex justify-content-between p-2">
             <div class="timer d-flex">
                 <h4>Holi Essentials </h4>
             </div>
@@ -323,7 +324,7 @@
         <div class="d-flex">
             <div class="card" style="border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/holi1.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/holi1.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Colours</p>
@@ -334,7 +335,7 @@
 
             <div class="card" style=" border: 0rem; ">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/holi2.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/holi2.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Gulal</p>
@@ -346,7 +347,7 @@
 
             <div class="card" style="border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/holi3.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/holi3.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body"> 
                     <p class="card-text">Baloons</p>
@@ -357,7 +358,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/holi4.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/holi4.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Holi</p>
@@ -368,7 +369,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/holi5.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/holi5.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Baloons Blower</p>
@@ -379,7 +380,7 @@
 
             <div class="card" style=" border: 0rem;">
                 <div class="image w-auto m-auto d-flex align-items-center h-50">
-                    <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch">
+                    <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch"/>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Color Removal</p>
