--- a/flipkart.html
+++ b/flipkart.html
@@ -42,7 +42,6 @@
                 <button class="navbar-toggler position-absolute top-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <!-- <span class="text-white navbar-toggler-icon"></span> -->
                     <i class="bi bi-list text-white"></i>
                 </button>
 
@@ -503,6 +502,33 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer -->
+
+        <section class="footer mt-5 shadow">
+            <div class="container-fluid text-center">
+                <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3">
+                    <div class="col">
+                        <div class="p-3"><i class="bi bi-bag-fill text-warning"></i>Become a Seller</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3"><i class="fa-solid fa-circle-star text-warning"></i>Advertise</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3"><i class="fa-solid fa-gift-card text-warning"></i>Gift Cards</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3"><i class="bi bi-question-circle-fill text-warning"></i>Help Center</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3"><i class="bi bi-c-circle text-warning"></i>2007-2023 Flipkart.com</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3"><i class="bi bi-emoji-smile text-warning"></i>Thanks, Visit Again</div>
                     </div>
                 </div>
             </div>
