--- a/flipkart.html
+++ b/flipkart.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="flipkart.css" />
 </head>
 
@@ -140,7 +142,7 @@
 
         <!-- Carousel -->
         <div class="container-fluid">
-            <div id="carousel" class="carousel container-fluid slide">
+            <div id="carousel" class="carousel slide mx-4">
                 <div class="container-fluid carousel-inner justify-content-center mt-2 position-relative">
                     <div class="carousel-item active w-100 h-100">
                         <img src="Images/carosel1.webp" class="d-block w-100 h-100" alt="carousel1" />
@@ -513,22 +515,22 @@
             <div class="container-fluid text-center">
                 <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3">
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-bag-fill text-warning"></i>Become a Seller</div>
+                        <div class="p-3"><i class="bi bi-bag-fill text-warning me-1"></i>Become a Seller</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="fa-solid fa-circle-star text-warning"></i>Advertise</div>
+                        <div class="p-3"><i class="bi bi-star-fill text-warning me-1"></i>Advertise</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="fa-solid fa-gift-card text-warning"></i>Gift Cards</div>
+                        <div class="p-3"><i class="bi bi-gift text-warning me-1"></i>Gift Cards</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-question-circle-fill text-warning"></i>Help Center</div>
+                        <div class="p-3"><i class="bi bi-question-circle-fill text-warning me-1"></i>Help Center</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-c-circle text-warning"></i>2007-2023 Flipkart.com</div>
+                        <div class="p-3"><i class="bi bi-c-circle text-warning me-1"></i>2007-2023 Flipkart.com</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-emoji-smile text-warning"></i>Thanks, Visit Again</div>
+                        <div class="p-3"><i class="bi bi-emoji-smile text-warning me-1"></i>Thanks, Visit Again</div>
                     </div>
                 </div>
             </div>
